--- a/requirements.txt
+++ b/requirements.txt
@@ -20,15 +20,14 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.10
 MarkupSafe==3.0.2
-mysql-connector-python==9.3.0
 numpy==2.2.6
 packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
 pluggy==1.6.0
+psycopg2-binary==2.9.9
 pytest==7.4.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
 pytz==2023.3
 six==1.17.0
 SQLAlchemy==2.0.23
