--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pluggy==1.6.0
 psycopg2-binary==2.9.9
 pytest==7.4.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2023.3
 six==1.17.0
 SQLAlchemy==2.0.23
